--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Progressive Web App for editing markdown/wikitext/html documents hosted on Dropbox (and some day other backends)",
   "main": "src/index.js",
   "scripts": {
+    "start": "http-server src/ -P http://localhost:8080?",
     "test": "npm test"
   },
   "repository": {
@@ -20,5 +21,17 @@
   "bugs": {
     "url": "https://github.com/kenjura/phobos/issues"
   },
-  "homepage": "https://github.com/kenjura/phobos#readme"
+  "homepage": "https://github.com/kenjura/phobos#readme",
+  "devDependencies": {
+    "dropbox": "^4.0.30",
+    "http-server": "^0.11.1",
+    "markdown-it": "^10.0.0",
+    "markdown-it-container": "^2.0.0",
+    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-sup": "^1.0.0",
+    "superstatic": "^6.0.4"
+  },
+  "dependencies": {
+    "@vaadin/router": "^1.5.0"
+  }
 }
