--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,5 @@
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "browsers": ["last 2 Chrome versions"]
-      }
-    }]
-  ],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
     "@babel/plugin-transform-runtime"
   ]
