--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
     "url": "https://github.com/kenjura/phobos/issues"
   },
   "homepage": "https://github.com/kenjura/phobos#readme",
+  "browserslist": [
+    "last 3 chrome versions"
+  ],
   "devDependencies": {
-    "@babel/core": "^7.7.4",
+    "@babel/core": "^7.7.5",
     "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.4",
+    "babel-jest": "^24.9.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
@@ -42,7 +47,9 @@
   },
   "dependencies": {
     "@vaadin/router": "^1.5.0",
+    "D": "^1.0.0",
     "humanize": "0.0.9",
+    "jest": "^24.9.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
