--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "type": "git",
     "url": "git+https://github.com/kenjura/phobos.git"
   },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>test/setup.enzyme.js"
+    ]
+  },
   "keywords": [
     "wiki",
     "markdown",
@@ -36,6 +41,8 @@
     "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
     "dropbox": "^4.0.30",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "markdown-it": "^10.0.0",
     "markdown-it-container": "^2.0.0",
     "markdown-it-deflist": "^2.0.3",
@@ -50,6 +57,7 @@
     "D": "^1.0.0",
     "humanize": "0.0.9",
     "jest": "^24.9.0",
+    "lodash": "^4.17.15",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
