--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "parcel -p 8080 src/index.html",
-    "test": "npm test"
+    "test": "jest --watch test"
   },
   "repository": {
     "type": "git",
