--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@vaadin/router": "^1.5.0",
     "D": "^1.0.0",
+    "dexie": "^2.0.4",
     "humanize": "0.0.9",
     "jest": "^24.9.0",
     "lodash": "^4.17.15",
