--- a/package.json
+++ b/package.json
@@ -53,12 +53,16 @@
     "sass": "^1.23.7"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@vaadin/router": "^1.5.0",
     "D": "^1.0.0",
+    "antd": "^3.26.3",
     "dexie": "^2.0.4",
     "humanize": "0.0.9",
     "jest": "^24.9.0",
     "lodash": "^4.17.15",
+    "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
